--- a/shell/w2tshell.rc
+++ b/shell/w2tshell.rc
@@ -1,23 +1,23 @@
 LANGUAGE 0, 1  // LANG_NEUTRAL, SUBLANG_DEFAULT
 
-main	ICON	"[project-acronym].ico"
+main	ICON	"w2tshell.ico"
 
 1 VERSIONINFO
-  FILEVERSION [project-version:1],[project-version:2],[project-version:3],[project-version:4]
-  PRODUCTVERSION [project-version:1],[project-version:2],[project-version:3],[project-version:4]
+  FILEVERSION 1,0,0,43
+  PRODUCTVERSION 1,0,0,43
   FILEOS 0x4L
   FILETYPE 0x1L
 BEGIN
   BLOCK "StringFileInfo" BEGIN
     BLOCK "040904b0" BEGIN
-      VALUE "ProductName", "[project-name]"
-      VALUE "FileDescription", "[project-description]"
-      VALUE "InternalName", "[project-acronym]\0"
-      VALUE "CompanyName", "[company-name]\0"
-      VALUE "LegalCopyright", "[legal-copyright]\0"
-      VALUE "FileVersion", "[file-version-string])\0"
-      VALUE "ProductVersion", "[product-version-string]\0"
-      VALUE "BuildDate", "[build-date:mmm dd yyyy hh:nn:ss]\0"
+      VALUE "ProductName", "w2tshell"
+      VALUE "FileDescription", "Shell application for wav2time scripts."
+      VALUE "InternalName", "w2tshell\0"
+      VALUE "CompanyName", "necne\0"
+      VALUE "LegalCopyright", "Copyright (c) 2003-2018 necne\0"
+      VALUE "FileVersion", "1.0.0 release 43 (29 June 2018))\0"
+      VALUE "ProductVersion", "1.0.0 release 43 (29 June 2018)\0"
+      VALUE "BuildDate", "Jun 29 2018 14:27:08\0"
     END
   END
   BLOCK "VarFileInfo" BEGIN
